# aswan

./: .readthedocs.yml  CITATION.cff  README.md  conftest.py  imdb-case.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yml  twine_release.yml
aswan/: __init__.py  __main__.py  config_class.py  connection_session.py  constants.py  depot.py  exceptions.py  metadata_handling.py  migrate.py  models.py  monitor_app.py  object_store.py  parsers.py  project.py  resources.py  security.py  simplified_functions.py  t2_integrators.py  url_handler.py  utils.py
aswan/depot/: __init__.py  base.py  remote.py
aswan/monitor_dash/: app.py
aswan/project/: __init__.py  core.py  creators.py
aswan/scheduler/: __init__.py  core.py  distributed_api.py  resource.py
aswan/security/: __init__.py  proxy_base.py  proxy_utils.py
aswan/t2/: __init__.py  extractor.py  types.py  util.py
aswan/tests/: proxy_src.py  test_init.py  utils.py
aswan/tests/godel_src/: __init__.py  app.py  handlers.py  (+1 more)
aswan/utils/: __init__.py  basic.py  browser.py  finders.py
docs/: autosumm.rst  index.rst
docs/api/: aswan.AswanConfig.rst  aswan.AswanDepot.rst  aswan.BrokenSessionError.rst  aswan.BrowserHandler.rst  aswan.BrowserJsonHandler.rst  aswan.BrowserSoupHandler.rst  aswan.ConcatToT2.rst  aswan.ConnectionError.rst  aswan.ConnectionSession.rst  aswan.EnvConfig.rst  aswan.Envs.rst  aswan.FlexibleDfParser.rst  aswan.ObjectStore.rst  aswan.ParsedCollectionEvent.rst  aswan.ProdConfig.rst  aswan.Project.rst  aswan.ProxyAuth.rst  aswan.ProxyBase.rst  aswan.RecordsToT2.rst  aswan.RequestHandler.rst  aswan.RequestJsonHandler.rst  aswan.RequestSoupHandler.rst  aswan.Statuses.rst  aswan.T2Integrator.rst  aswan.UrlHandler.rst  aswan.UrlJsonHandler.rst  aswan.WebExtHandler.rst  aswan.add_url_params.rst  aswan.get_json.rst  aswan.get_soup.rst  aswan.project_from_dir.rst  aswan.project_from_prod_conf.rst  aswan.project_from_prod_info.rst  aswan.run_simple_project.rst
docs/notebooks/: doc-000-intro.rst  doc-001-quickstart.rst
docs/release_notes/: v0.1.0.rst  v0.1.1.rst  v0.2.0.rst  v0.3.0.rst  v0.3.1.rst  v0.4.0.rst  v0.4.1.rst  v0.4.2.rst  v0.4.3.rst  v0.4.4.rst  v0.4.5.rst  v0.5.0.rst  v0.5.1.rst  v0.5.10.rst  v0.5.11.rst  v0.5.12.rst  v0.5.13.rst  v0.5.14.rst  v0.5.15.rst  v0.5.2.rst  v0.5.3.rst  v0.5.4.rst  v0.5.5.rst  v0.5.6.rst  v0.5.7.rst  v0.5.8.rst  v0.5.9.rst
docs_config/: current_release.rst
docs_config/release_notes/: v0.0.0.rst  v0.0.1.rst
notebooks/: doc-000-intro.ipynb  doc-001-quickstart.ipynb  imdb-case.ipynb  imdb.md
(+30 files in other folders)
