[project]
name = "aswan"
dynamic = ["version", "description"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "dash-bootstrap-components",
    "beautifulsoup4",
    "html5lib",
    "tqdm",
    "s3fs",
    "selenium",
    "dash",
    "sqlalchemy",
    "structlog",
    "pyyaml",
    "cookiecutter",
    "parquetranger",
    "atqo[ray,fancy]",
]

[project.optional-dependencies]
test = ["branthebuilder"]
doc = ["branthebuilder[doc]"]

[project.urls]
Homepage = "https://github.com/endremborza/aswan"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.branb]
line-length = 88
