[project]
name = "aswan"
dynamic = ["version", "description"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "html5lib",
    "selenium",
    "sqlalchemy",
    "structlog",
    "pyyaml",
    "atqo >=0.2.2"
]

[project.optional-dependencies]
remote = ["zimmauth","fabric","toml"]
monitor = ["pandas","dash","dash-bootstrap-components"]
test = ["branthebuilder","zimmauth[test]"]
doc = ["branthebuilder[doc]"]

[project.urls]
Homepage = "https://github.com/endremborza/aswan"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.branb]
line-length = 88

[tool.pytest.ini_options]
addopts = "-s"
