[project]
name = "aswan"
dynamic = ["version", "description"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "html5lib",
    "selenium",
    "sqlalchemy",
    "pyyaml",
    "typer",
    "brotli",
    "flask",
    "flask-cors",
    "atqo>=0.3.0"
]
scripts = {aswan = "aswan:app"}
[project.optional-dependencies]
remote = ["zimmauth[ssh,env]"]
monitor = ["pandas", "dash", "dash-bootstrap-components"]
test = ["branthebuilder", "zimmauth[test]"]
doc = ["branthebuilder[doc]"]

[project.urls]
Homepage = "https://github.com/endremborza/aswan"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.branb]
line-length = 88

[tool.pytest.ini_options]
addopts = "-s"
